--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "private": false,
   "name": "express-decorator-router",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "description": "use decorators in a simple way without transpiling javascript code",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha lib/index.spec.js"
+    "lint": "eslint src test",
+    "test": "mocha test/**/*.spec.js",
+    "coverage": "nyc --reporter=lcov --reporter=text npm run test"
   },
   "repository": {
     "type": "git",
@@ -26,7 +28,9 @@
   "homepage": "https://github.com/LucasMendesl/express-decorator-router#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^7.0.0"
+    "eslint": "^6.8.0",
+    "mocha": "^7.0.0",
+    "nyc": "^15.0.0"
   },
   "engines": {
     "node": ">=8"
