--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
+    "express": "^4.17.1",
+    "glob": "^7.1.6",
     "mocha": "^7.0.0",
     "nyc": "^15.0.0"
   },
