--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "express-decorator-router",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "use decorators in a simple way without transpiling javascript code",
   "main": "src/index.js",
   "scripts": {
@@ -26,13 +26,16 @@
     "url": "https://github.com/LucasMendesl/express-decorator-router/issues"
   },
   "homepage": "https://github.com/LucasMendesl/express-decorator-router#readme",
+  "dependencies": {
+    "glob": "^7.1.6"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
-    "glob": "^7.1.6",
     "mocha": "^7.0.0",
-    "nyc": "^15.0.0"
+    "nyc": "^15.0.0",
+    "supertest": "^4.0.2"
   },
   "engines": {
     "node": ">=8"
