--- a/package.json
+++ b/package.json
@@ -1,58 +1,59 @@
 {
-    "private": false,
-    "name": "express-decorator-router",
-    "version": "0.2.1",
-    "description": "use decorators in a simple way without transpiling javascript code",
-    "main": "src/index.js",
-    "scripts": {
-        "lint": "eslint src test",
-        "test": "mocha test/**/*.spec.js",
-        "coverage": "nyc --reporter=lcov --reporter=text npm run test"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/LucasMendesl/express-decorator-router.git"
-    },
-    "keywords": [
-        "decorators",
-        "express",
-        "router",
-        "routing",
-        "es6",
-        "without-transpiling",
-        "awilix",
-        "dependency-injection",
-        "IoC"
-    ],
-    "directories": {
-        "lib": "src"
-    },
-    "files": [
-        "src",
-        "LICENSE.md",
-        "README.md"
-    ],
-    "author": "Lucas Mendes Loureiro <mendes.lucas9498@gmail.com>",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/LucasMendesl/express-decorator-router/issues"
-    },
-    "homepage": "https://github.com/LucasMendesl/express-decorator-router#readme",
-    "peerDependencies": {
-        "awilix": "^6.1.0",
-        "glob": "^7.1.6"
-    },
-    "devDependencies": {
-        "chai": "^4.3.6",
-        "eslint": "^8.9.0",
-        "express": "^4.17.3",
-        "husky": "^4.2.3",
-        "mocha": "^9.2.0",
-        "nyc": "^15.1.0",
-        "sinon": "^13.0.1",
-        "supertest": "^6.2.2"
-    },
-    "engines": {
-        "node": ">=8"
-    }
+  "private": false,
+  "name": "express-decorator-router",
+  "version": "0.2.1",
+  "description": "use decorators in a simple way without transpiling javascript code",
+  "main": "src/index.js",
+  "scripts": {
+    "lint": "eslint src test",
+    "lint:fix": "eslint --fix src test",
+    "test": "mocha test/**/*.spec.js",
+    "coverage": "nyc --reporter=lcov --reporter=text npm run test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LucasMendesl/express-decorator-router.git"
+  },
+  "keywords": [
+    "decorators",
+    "express",
+    "router",
+    "routing",
+    "es6",
+    "without-transpiling",
+    "awilix",
+    "dependency-injection",
+    "IoC"
+  ],
+  "directories": {
+    "lib": "src"
+  },
+  "files": [
+    "src",
+    "LICENSE.md",
+    "README.md"
+  ],
+  "author": "Lucas Mendes Loureiro <mendes.lucas9498@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/LucasMendesl/express-decorator-router/issues"
+  },
+  "homepage": "https://github.com/LucasMendesl/express-decorator-router#readme",
+  "peerDependencies": {
+    "awilix": "^6.1.0",
+    "glob": "^7.1.6"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "eslint": "^8.9.0",
+    "express": "^4.17.3",
+    "husky": "^4.2.3",
+    "mocha": "^9.2.0",
+    "nyc": "^15.1.0",
+    "sinon": "^13.0.1",
+    "supertest": "^6.2.2"
+  },
+  "engines": {
+    "node": ">=8"
+  }
 }
